# arguably

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  README.md  genindex.html  index.html  mkdocs.py  mkdocs.yml  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  run  search.html  searchindex.js  sitemap.xml
.github/workflows/: python-package.yml  python-publish.yml
_modules/: index.html
_modules/arguably/: _context.html  _modifiers.html  _util.html
_sources/: index.rst.txt
api-reference/: index.html
arguably/: __init__.py  __main__.py  _argparse_extensions.py  _commands.py  _context.py  _modifiers.py  _util.py  arg.py  util.py
assets/: PYPI_README.md  make_pypi_readme.py
assets/logo/: logo.txt
assets/pypi/: PYPI_README.md  make_pypi_readme.py
contributing/: index.html
coverage/: class_index.html  d_a93d8c4ccb61e4dc___init___py.html  d_a93d8c4ccb61e4dc___main___py.html  d_a93d8c4ccb61e4dc__argparse_extensions_py.html  d_a93d8c4ccb61e4dc__commands_py.html  d_a93d8c4ccb61e4dc__context_py.html  d_a93d8c4ccb61e4dc__modifiers_py.html  d_a93d8c4ccb61e4dc__util_py.html  d_a93d8c4ccb61e4dc_arg_py.html  d_a93d8c4ccb61e4dc_util_py.html  function_index.html  index.html  status.json  z_a93d8c4ccb61e4dc___init___py.html  z_a93d8c4ccb61e4dc___main___py.html  z_a93d8c4ccb61e4dc__argparse_extensions_py.html  z_a93d8c4ccb61e4dc__commands_py.html  z_a93d8c4ccb61e4dc__context_py.html  z_a93d8c4ccb61e4dc__modifiers_py.html  z_a93d8c4ccb61e4dc__util_py.html  z_a93d8c4ccb61e4dc_arg_py.html
docs/: .gitignore  api-reference.md  conf.py  contributing.md  example.md  examples.md  extra.css  get-started.md  make  run  tutorial.md  why.md
docs/scripts/: extra.js
docs/styles/: extra.css
docs/tutorial/: intro.md  subcommands.md  type-hints.md
etc/pypi/: PYPI_README.md  make_pypi_readme.py
etc/scripts/: annotated.py  aws-1.py  aws-2.py  enum-1.py  everything.py  example-hello.py  flag.py  goodbye-1.py  hello-1.py  hello-2.py  hello-3.py  hello-4.py  hello-5.py  hello-6.py  hello-7.py  hello-async-1.py  intro.py  nested-1.py  party-trick.py  process.py  readme-1.py  readme-2.py  root-1.py  root-2.py  simple.py  type-hint.py
etc/scripts/api-examples/: arg-builder.py  arg-choices.py  arg-count.py  arg-handler.py  arg-missing.py  arg-required.py  arguably-exception.py  arguably-warn.py  command.py  error.py  is_target.py  run.py  subtype.py
example/: index.html
examples/: index.html
get-started/: index.html
getting-started/: index.html
noarg/: __init__.py
search/: search_index.json
styles/: extra.css
test/: __init__.py  conftest.py  test_advanced.py  test_annotated.py  test_basic.py  test_enum.py  test_exceptions.py  test_main.py
test/assets/: target1.py  target2.py
tutorial/: index.html
tutorial/intro/: index.html
tutorial/subcommands/: index.html
tutorial/type-hints/: index.html
why/: index.html
