[tool.poetry]
name = "arguably"
version = "1.1.0"
description = "turns functions into command line interfaces"
authors = ["treykeown <2755914+treykeown@users.noreply.github.com>"]
readme = "assets/PYPI_README.md"
homepage = "https://github.com/treykeown/arguably"
repository = "https://github.com/treykeown/arguably"

[tool.poetry.dependencies]
python = "^3.8"
docstring-parser = "^0.15"
typing-extensions = "^4.6.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
ruff = "^0.0.263"
pre-commit = "^3.3.2"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.12.0"
nox = "^2023.4.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.mypy]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.black]
line-length = 120

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
