[tool.poetry]
name = "arguably"
version = "1.2.2"
description = "The best Python CLI library, arguably."
authors = ["treykeown <2755914+treykeown@users.noreply.github.com>"]
readme = "etc/pypi/PYPI_README.md"
homepage = "https://treykeown.github.io/arguably/"
repository = "https://github.com/treykeown/arguably"

[tool.poetry.dependencies]
python = "^3.8"
docstring-parser = "^0.15"
typing-extensions = {version = "^4.6.3", python = ">=3.8,<3.9" }

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
ruff = "^0.0.263"
pre-commit = "^3.3.2"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.12.0"
nox = "^2023.4.22"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = ["etc/"]

[tool.mypy]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = "^etc/"

[tool.black]
line-length = 120

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
